# Cerealization

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  deploy.sh  install.sh  main.cpp
Cerealizable/: List.hpp  Object.hpp  Scalar.hpp  Tuple.hpp
Cerealizer/Binary/: Binary.cpp  Binary.hpp  BinaryObject.hpp  BinaryStream.cpp  BinaryStream.hpp  BinaryTuple.hpp  DefaultOperations.hpp  Operations.cpp  Operations.hpp
Cerealizer/JSON/: DefaultOperations.cpp  JSON.cpp  JSON.hpp  JSONStream.cpp  JSONStream.hpp
include/Cerealizable/: Data.hpp  DataDecl.hpp  List.hpp  Object.hpp  Scalar.hpp  Tuple.hpp
include/Cerealizer/Binary/: Binary.hpp  BinaryObject.hpp  BinaryStream.hpp  BinaryTuple.hpp  DefaultOperations.hpp  ModelOperations.hpp  Operations.hpp  StructOperations.hpp
include/Cerealizer/JSON/: DefaultOperations.hpp  JSON.hpp  JSONObject.hpp  JSONStream.hpp  JSONTuple.hpp  ModelOperations.hpp  Operations.hpp  StructOperations.hpp
includes/: List.hpp  Object.hpp  Scalar.hpp  Tuple.hpp
src/Binary/: BinaryOperations.cpp  BinaryStream.cpp  DefaultOperations.cpp  Operations.cpp
src/JSON/: DefaultOperations.cpp  JSONOperations.cpp  JSONStream.cpp  Operations.cpp
tests/advanced/: test_1.cpp
tests/simple/: test_model_cereal.cpp
